--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -1,5 +1,5 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/zdqyi2905/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="http://san4.hua.midnightchannel.net/hua/7" rel="nofollow">大纪元</a> | <a href="http://san4.hua.midnightchannel.net/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://san4.hua.midnightchannel.net/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://san4.hua.midnightchannel.net/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://san4.hua.midnightchannel.net/hua/11" rel="nofollow">看中国</a> | <a href="http://san4.hua.midnightchannel.net/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://san4.hua.midnightchannel.net/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://san4.hua.midnightchannel.net/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr>
-<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/15/n11796276.md#1"><img width="320" src="http://i.epochtimes.com/assets/uploads/2020/01/000_1NQ6MN-320x200.jpg">美中协议部分解读 执行机制及争端解决</a><br><h2><p><hr><strong>排行榜</strong></p></h2>
+<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/15/n11796241.md#1"><img width="320" src="http://i.epochtimes.com/assets/uploads/2020/01/000_1NO30S_refine-320x200.jpg">伊朗在变天 中共或失去打击美国的王牌</a><br><h2><p><hr><strong>排行榜</strong></p></h2>
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/11/n11786063.md#1">【拍案惊奇】蔡英文连任！北京的三层误判</a><br>
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/11/n11783658.md#1">【更新】蔡英文破817万票 民进党立委过半</a><br>
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/6/n11772884.md#1">【直播回放】蔡英文高票连任 名家点评胜选关键</a><br>
@@ -30,6 +30,7 @@
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/9/n11778295.md#1">伊朗导弹袭基地 美国国防部披露更多细节</a><br>
 <br><p><a href="https://github.com/zdqyi2905/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
+<a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/15/n11796279.md#1">深圳一街道花1400万粉刷废弃房屋 惹议</a><br>
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/15/n11796197.md#1">周晓辉：党章放床头可笑 中南海黔驴技穷</a><br>
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/15/n11795863.md#1">【新闻看点】川刘大阵势签协议 北京被逼上架</a><br>
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/15/n11796086.md#1">中共国企欠民企9千亿 李克强年前急回应</a><br>
@@ -41,8 +42,9 @@
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/15/n11795933.md#1">骆惠宁酒会上软硬兼施 香港青年逐一解读</a><br>
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/15/n11795948.md#1">上海也要过“紧日子” 一般财政支出减10%</a><br>
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/15/n11795723.md#1">新影片显示：伊朗射二枚导弹击落乌航客机</a><br>
-<a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/15/n11795725.md#1">青海城投爆8.5亿美元债违约危机 标普降级</a><br>
+<a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/15/n11795935.md#1">前央视主播赵普投资酒店 发文请网友免费试住</a><br>
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/15/n11796226.md#1">美中签署第一阶段协议 刘鹤讲话摘要</a><br>
+<a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/15/n11796276.md#1">美中协议部分解读 执行机制及争端解决</a><br>
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/15/n11795345.md#1">港警拟配备电击枪 泛民派议员强烈反对</a><br>
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/15/n11795358.md#1">中共涉干预外媒 自由之家吁各国驱逐中共官员</a><br>
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/15/n11795861.md#1">中美签第一阶段贸易协议 美国会回应多元化</a><br>
@@ -50,6 +52,7 @@
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/15/n11795226.md#1">美中科技冷战  谢金河：美将大力封杀华为</a><br>
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/15/n11796065.md#1">习近平让刘鹤给川普带封信 说了些什么</a><br>
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/15/n11795625.md#1">【更新】美中签署历史性第一阶段贸易协议</a><br>
+<a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/15/n11795725.md#1">青海城投爆8.5亿美元债违约危机 标普降级</a><br>
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/15/n11795838.md#1">大陆4公司巨亏60亿 17万股民恐血本无归</a><br>
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/15/n11795797.md#1">涉中共间谍活动 德国警方突击搜查三人</a><br>
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11793247.md#1">山东招远610副主任宋少昌被举报到海外</a><br>
@@ -85,15 +88,12 @@
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/10/n11781408.md#1">【独家】专访郑文杰：被虐待致精神崩溃（三）</a><br>
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11793678.md#1">说崩就崩 大陆ETC概念股集体暴跌</a><br>
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11793494.md#1">借吴花燕之病 民政部募捐百万 仅转出2万</a><br>
-<a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11793524.md#1">美中签协议前 莱特希泽姆钦发声明提两件事</a><br>
-<a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11793468.md#1">白向群被曝拥豪宅十多套 被查扣名酒逾千瓶</a><br>
-<a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11792673.md#1">南昌十多名法轮功学员遭中共非法判刑</a><br>
 <br><p><a href="https://github.com/zdqyi2905/djy/blob/master/gb/nsc413_2.md#1">更多......</a></p></td><td VALIGN=TOP rowspan=6 width="156" align="middle"><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"><br>古今奇观-藏字石</a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/6c10-720.jpg" title="从610到720" alt="从610到720"><br>从610到720</a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/1400l.jpg" title="剖析1400例" alt="剖析1400例"><br>剖析1400例</a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/jian-z513.jpg" title="见证513" alt="见证513"><br>见证513</a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=TOP width="355"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11793171.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-912439212-150x120.jpg"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11793171.md#1">美参议员呼吁抵制中共监狱奴工制品</a><br>美国国会参议员提醒消费者，抵制中共 ...<br><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11791676.md#1">【拍案惊奇】坠楼前场面被拍到 港男自杀7疑点</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/12/n11787878.md#1">年末岁首 中国人明真相远离中共</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11791242.md#1">香港终审法院首席法官 吁法律界挺身护法治</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11790689.md#1">人权组织成员被拒入香港 吁抵制中共霸权</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/12/n11787667.md#1">哈尔滨法轮功学员刘淑梅生前遭受的迫害</a><br><br><p><a href="https://github.com/zdqyi2905/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11793368.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/leijun-150x120.jpg"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11793368.md#1">小米和华为互撕 指荣耀手机库存大量积压</a><br>最近华为荣耀和小米的红米手机在网上 ...<br><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11793352.md#1">【热点互动】2020中国经济灰犀牛与黑天鹅</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11793250.md#1">蓬佩奥：与中共做生意 硅谷科技公司要三思</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11793178.md#1">大陆学者辟谣食品安全问题 被事实打脸</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11793313.md#1">美国与各国联手严审中共海外投资</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11793134.md#1">中美签署协议前 北京加购美商品金额流出</a><br><br><p><a href="https://github.com/zdqyi2905/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/15/n11795688.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/e61190ef76c6a7efb7a59382f8faaf51f2de6696-150x120.jpg"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/15/n11795688.md#1">爸爸是书记 10岁童散文登专业金融期刊</a><br>中国期刊品质屡屡引发质疑。有学者发 ...<br><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11793607.md#1">剑指中共 美欧日提WTO补贴协定六大改革</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11793300.md#1">【新闻看点】中美初阶段贸协曝光 北京大让步</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11793382.md#1">骆惠宁再访粤 绕过特首林郑谈合作遭质疑</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11793168.md#1">本土派常委仅剩一人 中共三党魁争广东始末</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11791857.md#1">【翻墙必看】美中签协议 习访缅甸的背后</a><br><br><p><a href="https://github.com/zdqyi2905/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11793129.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/1920x1280_812421530952-150x120.jpg"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11793129.md#1">8男携刀入室行凶  屋主防卫致1死 被判8年</a><br>2015年10月14日，山东烟台，凌晨0时1 ...<br><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11792728.md#1">德国病毒专家：武汉肺炎类似SARS病毒</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11792705.md#1">世卫：武汉肺炎“有限度人传人” 疫情恐扩散</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11792580.md#1">杭州国企施工现场罐体发生爆裂 致3人死亡</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11791948.md#1">广东珠海长炼石化工厂爆炸 浓烟滚滚</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11791916.md#1">泰国现首例武汉肺炎 专家忧病毒扩散</a><br><br><p><a href="https://github.com/zdqyi2905/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11793430.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/3-can_21884547-150x120.jpg"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11793430.md#1">孟晚舟引渡聆讯 加拿大法官禁媒体现场录像</a><br>美国的检察官指控孟晚舟就华为与Skyc ...<br><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/15/n11794138.md#1">每日三退声明精选（2020/01/14）</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11793160.md#1">范冰冰转发制片人微博 被指复出之路顺利推进</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11793560.md#1">妻子被“潜规则” 男子起诉北影副校长</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11793224.md#1">【新闻看点】伊朗3蠢事 北京背书 川普警告</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11791592.md#1">跟进辞中常委 蒋万安等人盼国民党彻底改革</a><br><br><p><a href="https://github.com/zdqyi2905/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/10/n11782930.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2017/01/PO_X9843-150x120.jpg"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/10/n11782930.md#1">黄渤饰教练引争议 《中国女排》或无缘新年档</a><br>由香港导演陈可辛执导的《中国女排》 ...<br><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/10/n11783185.md#1">中国C919大飞机因技术瓶颈而延后</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/9/n11780326.md#1">晒与母亲合照宣传新片 徐峥不再以光头示人</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/8/n11777510.md#1">杨紫获大陆年度女演员和女明星商业价值双冠</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/8/n11777290.md#1">中共为何禁中小学使用境外教材</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/8/n11775957.md#1">西安高中生将老师杀害潜逃 已被抓获</a><br><br><p><a href="https://github.com/zdqyi2905/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>网闻禁闻</strong></p></h2><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/9/n11779813.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/000_JX0CF-150x120.jpg"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/9/n11779813.md#1">中共犯下反人类罪 美国会报告促制裁</a><br>美国国会一份报告呼吁对侵犯人权行为 ...<br><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/3/n11765947.md#1">前高管炮轰谷歌中国项目：重利轻人权</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/31/n11758321.md#1">安全担忧 美陆军紧随海军禁用TikTok</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/30/n11756102.md#1">中共外交辞令出尽丑 “耿爽模拟器”被下架</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/24/n11742493.md#1">网文：大陆汽车行业艰难的两大看点</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/24/n11742305.md#1">网文：央行钱印出来了 借钱的人没了</a><br><br><p><a href="https://github.com/zdqyi2905/djy/blob/master/gb/ncid2420.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>群体事件</strong></p></h2><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/9/n11780313.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/1-4-150x120.png"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/9/n11780313.md#1">重庆访民险遭绑架 施救者三人被警方带走</a><br>今天（9日）中午11时在重庆人和街小?...<br><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/5/n11769412.md#1">无锡访民联署“给黄钦书记的公开信”</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/1/n11760851.md#1">2020全面奔小康？访民：泪奔</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/26/n11747752.md#1">中科大副校长被指与中共军企合作 曾遭美拒签</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/26/n11746173.md#1">浙数千学子连续维权三天 抗议学校改名换制</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/24/n11742110.md#1">发表撑港灭共言论 大陆多名公民遭刑拘</a><br><br><p><a href="https://github.com/zdqyi2905/djy/blob/master/gb/ncid279.md#1">更多......</a></p></td></tr>
+<tr><td VALIGN=TOP width="355"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11792673.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/07/2007-4-17-zxtup-06-150x120.jpg"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11792673.md#1">南昌十多名法轮功学员遭中共非法判刑</a><br>江西南昌市十多名法轮功学员在2019年 ...<br><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11793171.md#1">美参议员呼吁抵制中共监狱奴工制品</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11791676.md#1">【拍案惊奇】坠楼前场面被拍到 港男自杀7疑点</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/12/n11787878.md#1">年末岁首 中国人明真相远离中共</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11791242.md#1">香港终审法院首席法官 吁法律界挺身护法治</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11790689.md#1">人权组织成员被拒入香港 吁抵制中共霸权</a><br><br><p><a href="https://github.com/zdqyi2905/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11793524.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/000_1LA7LC-150x120.jpg"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11793524.md#1">美中签协议前 莱特希泽姆钦发声明提两件事</a><br>在美中签署第一阶段贸易协议前一天， ...<br><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11793368.md#1">小米和华为互撕 指荣耀手机库存大量积压</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11793352.md#1">【热点互动】2020中国经济灰犀牛与黑天鹅</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11793250.md#1">蓬佩奥：与中共做生意 硅谷科技公司要三思</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11793178.md#1">大陆学者辟谣食品安全问题 被事实打脸</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11793313.md#1">美国与各国联手严审中共海外投资</a><br><br><p><a href="https://github.com/zdqyi2905/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/15/n11795688.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/e61190ef76c6a7efb7a59382f8faaf51f2de6696-150x120.jpg"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/15/n11795688.md#1">爸爸是书记 10岁童散文登专业金融期刊</a><br>中国期刊品质屡屡引发质疑。有学者发 ...<br><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11793468.md#1">白向群被曝拥豪宅十多套 被查扣名酒逾千瓶</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11793607.md#1">剑指中共 美欧日提WTO补贴协定六大改革</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11793300.md#1">【新闻看点】中美初阶段贸协曝光 北京大让步</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11793382.md#1">骆惠宁再访粤 绕过特首林郑谈合作遭质疑</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11793168.md#1">本土派常委仅剩一人 中共三党魁争广东始末</a><br><br><p><a href="https://github.com/zdqyi2905/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11793129.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/1920x1280_812421530952-150x120.jpg"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11793129.md#1">8男携刀入室行凶  屋主防卫致1死 被判8年</a><br>2015年10月14日，山东烟台，凌晨0时1 ...<br><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11792728.md#1">德国病毒专家：武汉肺炎类似SARS病毒</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11792705.md#1">世卫：武汉肺炎“有限度人传人” 疫情恐扩散</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11792580.md#1">杭州国企施工现场罐体发生爆裂 致3人死亡</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11791948.md#1">广东珠海长炼石化工厂爆炸 浓烟滚滚</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11791916.md#1">泰国现首例武汉肺炎 专家忧病毒扩散</a><br><br><p><a href="https://github.com/zdqyi2905/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11793430.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/3-can_21884547-150x120.jpg"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11793430.md#1">孟晚舟引渡聆讯 加拿大法官禁媒体现场录像</a><br>美国的检察官指控孟晚舟就华为与Skyc ...<br><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/15/n11794138.md#1">每日三退声明精选（2020/01/14）</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11793160.md#1">范冰冰转发制片人微博 被指复出之路顺利推进</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11793560.md#1">妻子被“潜规则” 男子起诉北影副校长</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11793224.md#1">【新闻看点】伊朗3蠢事 北京背书 川普警告</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11791592.md#1">跟进辞中常委 蒋万安等人盼国民党彻底改革</a><br><br><p><a href="https://github.com/zdqyi2905/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/10/n11782930.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2017/01/PO_X9843-150x120.jpg"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/10/n11782930.md#1">黄渤饰教练引争议 《中国女排》或无缘新年档</a><br>由香港导演陈可辛执导的《中国女排》 ...<br><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/10/n11783185.md#1">中国C919大飞机因技术瓶颈而延后</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/9/n11780326.md#1">晒与母亲合照宣传新片 徐峥不再以光头示人</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/8/n11777510.md#1">杨紫获大陆年度女演员和女明星商业价值双冠</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/8/n11777290.md#1">中共为何禁中小学使用境外教材</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/8/n11775957.md#1">西安高中生将老师杀害潜逃 已被抓获</a><br><br><p><a href="https://github.com/zdqyi2905/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>网闻禁闻</strong></p></h2><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/9/n11779813.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/000_JX0CF-150x120.jpg"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/9/n11779813.md#1">中共犯下反人类罪 美国会报告促制裁</a><br>美国国会一份报告呼吁对侵犯人权行为 ...<br><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/3/n11765947.md#1">前高管炮轰谷歌中国项目：重利轻人权</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/31/n11758321.md#1">安全担忧 美陆军紧随海军禁用TikTok</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/30/n11756102.md#1">中共外交辞令出尽丑 “耿爽模拟器”被下架</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/24/n11742493.md#1">网文：大陆汽车行业艰难的两大看点</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/24/n11742305.md#1">网文：央行钱印出来了 借钱的人没了</a><br><br><p><a href="https://github.com/zdqyi2905/djy/blob/master/gb/ncid2420.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>群体事件</strong></p></h2><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/9/n11780313.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/1-4-150x120.png"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/9/n11780313.md#1">重庆访民险遭绑架 施救者三人被警方带走</a><br>今天（9日）中午11时在重庆人和街小?...<br><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/5/n11769412.md#1">无锡访民联署“给黄钦书记的公开信”</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/1/n11760851.md#1">2020全面奔小康？访民：泪奔</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/26/n11747752.md#1">中科大副校长被指与中共军企合作 曾遭美拒签</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/26/n11746173.md#1">浙数千学子连续维权三天 抗议学校改名换制</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/24/n11742110.md#1">发表撑港灭共言论 大陆多名公民遭刑拘</a><br><br><p><a href="https://github.com/zdqyi2905/djy/blob/master/gb/ncid279.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="355"><h2><p><strong>九评共产党</strong></p></h2><a href="https://github.com/zdqyi2905/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">【一】评共产党是什么</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">【二】评中国共产党是怎样起家的</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">【三】评中国共产党的暴政</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">【四】评共产党是反宇宙的力量</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">【五】评江泽民与中共相互利用迫害法轮功</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">【六】评中国共产党破坏民族文化</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">【七】评中国共产党的杀人历史</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">【八】评中国共产党的邪教本质</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">【九】评中国共产党的流氓本性</a></td><td VALIGN=TOP width="352"><h2><p><strong>三退大潮</strong></p></h2><strong>退出中共党、团、队总人数:
 
 ```diff
-- 共 349,902,063 人
+- 共 349,902,279 人
 ```
 </strong>
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/30/n11754554.md#1">新元赋——退党中心2020新年寄语</a><br>
